Fixes reset password success text hidden under nav bar bug.

--- a/app/styles/_wizard.scss
+++ b/app/styles/_wizard.scss
@@ -174,6 +174,14 @@ $wizard-icon-height: 68px;
 .wizard-main {
   padding: 8%;
 
+  &.with-nav-filler {
+    margin-top: $logo-height;
+
+    @media #{$breakpoint-mobile-2} {
+      margin-top: 0;
+    }
+  }
+
   .form-btn {
     width: 100%;
     height: 45px;
